data/derived/comb/progs/unify/prog3458.ml.out
Characters 92-96:
  | Sine (s1) -> sin(s1)
                    ^^^^
Error: This expression has type expr but an expression was expected of type
         float
